--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "antd": "^5.27.1",
     "axios": "^1.11.0",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "react": "^19.1.0",
